--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revdate">2018-11-16</span>
+<span id="revdate">2018-11-20</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
@@ -1099,7 +1099,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>100</code></p></td>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>intro</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">== Introduzione</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">= Introduzione</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>10000</code></p></td>
@@ -1111,7 +1111,19 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>20000</code></p></td>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>messaggi_libreria</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">==  Messaggi della Libreria Standard</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==  Messaggi della Libreria</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>23000</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>libmsg_verbi</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Messaggi dei Verbi</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>23100</code></p></td>
+<td class="tableblock halign-right valign-top"></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>libmsg_verbi_vsym</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">==== Note Riguardo l&#8217;Uso di <code>$v</code></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>50000</code></p></td>
