--- a/alanlib_ita/lib_classi.html
+++ b/alanlib_ita/lib_classi.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.8.0-Alpha,</span>
-<span id="revdate">2018-11-13</span>
+<span id="revnumber">versione 0.8.1-Alpha,</span>
+<span id="revdate">2018-11-20</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -447,14 +447,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <ul class="sectlevel1">
 <li><a href="#_introduzione">Introduzione</a>
 <ul class="sectlevel2">
-<li><a href="#_elenco_delle_classi">Elenco delle Classi</a></li>
+<li><a href="#_elenco_delle_classi">Elenco delle classi</a></li>
 </ul>
 </li>
 <li><a href="#_vestiario">Vestiario</a>
 <ul class="sectlevel2">
-<li><a href="#_istruzioni_per_luso_del_vestiario">Istruzioni per l&#8217;Uso del Vestiario</a>
+<li><a href="#_istruzioni_per_luso_del_vestiario">Istruzioni per l&#8217;uso del vestiario</a>
 <ul class="sectlevel3">
-<li><a href="#_la_tabella_del_vestiario">La Tabella del Vestiario</a></li>
+<li><a href="#_la_tabella_del_vestiario">La tabella del vestiario</a></li>
 </ul>
 </li>
 </ul>
@@ -462,7 +462,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_dispositivi">Dispositivi</a></li>
 <li><a href="#_porte">Porte</a></li>
 <li><a href="#_finestre">Finestre</a></li>
-<li><a href="#_fonti_di_luce">Fonti di Luce</a></li>
+<li><a href="#_fonti_di_luce">Fonti di luce</a></li>
 <li><a href="#_liquidi">Liquidi</a>
 <ul class="sectlevel2">
 <li><a href="#_verbi">Verbi</a>
@@ -487,7 +487,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 </ul>
 </li>
-<li><a href="#_contenitore_elencato">Contenitore Elencato</a></li>
+<li><a href="#_contenitore_elencato">Contenitore elencato</a></li>
 <li><a href="#_suoni">Suoni</a></li>
 <li><a href="#_supporti">Supporti</a>
 <ul class="sectlevel2">
@@ -496,14 +496,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_attori">Attori</a>
 <ul class="sectlevel2">
-<li><a href="#_sottoclassi_di_actor">Sottoclassi di ACTOR</a></li>
+<li><a href="#_sottoclassi_di_actor">Sottoclassi di actor</a></li>
 </ul>
 </li>
-<li><a href="#_oggetti_fittizi">Oggetti Fittizi</a></li>
+<li><a href="#_oggetti_fittizi">Oggetti fittizi</a></li>
 <li><a href="#_todo">TODO</a>
 <ul class="sectlevel2">
-<li><a href="#_check_list_generale">Check List Generale</a></li>
-<li><a href="#_check_list_doxter">Check List Doxter</a></li>
+<li><a href="#_check_list_generale">Check-list generale</a></li>
+<li><a href="#_check_list_per_doxter">Check-list per Doxter</a></li>
 </ul>
 </li>
 </ul>
@@ -535,7 +535,7 @@ ciascuna classe viene riportato se e dove venga fatto riferimento ad essa
 negli altri moduli della libreria.</p>
 </div>
 <div class="sect2">
-<h3 id="_elenco_delle_classi"><a class="anchor" href="#_elenco_delle_classi"></a>Elenco delle Classi</h3>
+<h3 id="_elenco_delle_classi"><a class="anchor" href="#_elenco_delle_classi"></a>Elenco delle classi</h3>
 <div class="admonitionblock warning">
 <table>
 <tr>
@@ -602,9 +602,9 @@ classe.</p>
 </table>
 </div>
 <div class="sect2">
-<h3 id="_istruzioni_per_luso_del_vestiario"><a class="anchor" href="#_istruzioni_per_luso_del_vestiario"></a>Istruzioni per l&#8217;Uso del Vestiario</h3>
+<h3 id="_istruzioni_per_luso_del_vestiario"><a class="anchor" href="#_istruzioni_per_luso_del_vestiario"></a>Istruzioni per l&#8217;uso del vestiario</h3>
 <div class="sect3">
-<h4 id="_la_tabella_del_vestiario"><a class="anchor" href="#_la_tabella_del_vestiario"></a>La Tabella del Vestiario</h4>
+<h4 id="_la_tabella_del_vestiario"><a class="anchor" href="#_la_tabella_del_vestiario"></a>La tabella del vestiario</h4>
 <div class="paragraph">
 <p>La tabella che segue riporta una selezione di indumenti d&#8217;uso comune ed i
 corrispettivi valori degli attributi per una corretta implementazione.</p>
@@ -937,7 +937,7 @@ esaminata, la descrizione includerà il suo stato attuale (aperta o chiusa).</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_fonti_di_luce"><a class="anchor" href="#_fonti_di_luce"></a>Fonti di Luce</h2>
+<h2 id="_fonti_di_luce"><a class="anchor" href="#_fonti_di_luce"></a>Fonti di luce</h2>
 <div class="sectionbody">
 
 </div>
@@ -1020,7 +1020,7 @@ Di default un liquido non è potabile.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_contenitore_elencato"><a class="anchor" href="#_contenitore_elencato"></a>Contenitore Elencato</h2>
+<h2 id="_contenitore_elencato"><a class="anchor" href="#_contenitore_elencato"></a>Contenitore elencato</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Si tratta di un contenitore i cui contenuti (se è aperto) saranno elencati
@@ -1158,7 +1158,7 @@ utilizzabile con il verbo "spara" (p.es., una pistola, un cannone).</p>
 <h2 id="_attori"><a class="anchor" href="#_attori"></a>Attori</h2>
 <div class="sectionbody">
 <div class="sect2">
-<h3 id="_sottoclassi_di_actor"><a class="anchor" href="#_sottoclassi_di_actor"></a>Sottoclassi di ACTOR</h3>
+<h3 id="_sottoclassi_di_actor"><a class="anchor" href="#_sottoclassi_di_actor"></a>Sottoclassi di actor</h3>
 <div class="paragraph">
 <p>La libreria definisce alcune sottoclassi specializzate di <code>ACTOR</code>:</p>
 </div>
@@ -1190,7 +1190,7 @@ utilizzabile con il verbo "spara" (p.es., una pistola, un cannone).</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_oggetti_fittizi"><a class="anchor" href="#_oggetti_fittizi"></a>Oggetti Fittizi</h2>
+<h2 id="_oggetti_fittizi"><a class="anchor" href="#_oggetti_fittizi"></a>Oggetti fittizi</h2>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Gli oggetti fittizi sono istanze utilizzate per inizializzare correttamente
@@ -1207,7 +1207,7 @@ altre istanze o classi (attributi di tipo istanza o insieme).</p>
 italiano del modulo delle classi.</p>
 </div>
 <div class="sect2">
-<h3 id="_check_list_generale"><a class="anchor" href="#_check_list_generale"></a>Check List Generale</h3>
+<h3 id="_check_list_generale"><a class="anchor" href="#_check_list_generale"></a>Check-list generale</h3>
 <div class="paragraph">
 <p>Lista della spesa per le varie cosucce da fare:</p>
 </div>
@@ -1220,7 +1220,7 @@ italiano del modulo delle classi.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_check_list_doxter"><a class="anchor" href="#_check_list_doxter"></a>Check List Doxter</h3>
+<h3 id="_check_list_per_doxter"><a class="anchor" href="#_check_list_per_doxter"></a>Check-list per Doxter</h3>
 <div class="paragraph">
 <p>Finisci di trasformare commenti in documentazione Doxter:</p>
 </div>
@@ -1282,7 +1282,7 @@ italiano del modulo delle classi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.8.0-Alpha<br>
+Versione 0.8.1-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
