--- a/alanlib_ita/lib_definizioni.html
+++ b/alanlib_ita/lib_definizioni.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.8.0-Alpha,</span>
-<span id="revdate">2018-11-13</span>
+<span id="revnumber">versione 0.8.1-Alpha,</span>
+<span id="revdate">2018-11-20</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -452,12 +452,12 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_lintestazione_dellavventura_banner">L&#8217;Intestazione dell&#8217;Avventura (Banner)</a>
 <ul class="sectlevel2">
-<li><a href="#_attributi_dellintestazione">Attributi dell&#8217;Intestazione</a></li>
+<li><a href="#_attributi_dellintestazione">Attributi dell&#8217;intestazione</a></li>
 </ul>
 </li>
 <li><a href="#_todo">TODO</a>
 <ul class="sectlevel2">
-<li><a href="#_check_list">Check List</a></li>
+<li><a href="#_check_list_generale">Check-list generale</a></li>
 </ul>
 </li>
 </ul>
@@ -718,7 +718,7 @@ dettagli del testo del banner essa attingerà ai vari attributi di intestazione
 presenti nell&#8217;istanza <code>mia_AT</code> dell&#8217;avventura.</p>
 </div>
 <div class="sect2">
-<h3 id="_attributi_dellintestazione"><a class="anchor" href="#_attributi_dellintestazione"></a>Attributi dell&#8217;Intestazione</h3>
+<h3 id="_attributi_dellintestazione"><a class="anchor" href="#_attributi_dellintestazione"></a>Attributi dell&#8217;intestazione</h3>
 <div class="paragraph">
 <p>L&#8217;istanza <code>mia_AT</code> (del <code>blocco_definizioni</code>) espone all&#8217;autore degli
 attributi per fornire i dettagli del banner che potrà (facoltativamente)
@@ -745,7 +745,7 @@ essere mostrato all&#8217;inizio della partita tramite il template dell&#8217;is
 italiano del modulo delle definizioni.</p>
 </div>
 <div class="sect2">
-<h3 id="_check_list"><a class="anchor" href="#_check_list"></a>Check List</h3>
+<h3 id="_check_list_generale"><a class="anchor" href="#_check_list_generale"></a>Check-list generale</h3>
 <div class="paragraph">
 <p>Lista della spesa per le varie cosucce da fare:</p>
 </div>
@@ -755,7 +755,7 @@ italiano del modulo delle definizioni.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.8.0-Alpha<br>
+Versione 0.8.1-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
