--- a/alanlib_ita/lib_messaggi.html
+++ b/alanlib_ita/lib_messaggi.html
@@ -438,24 +438,29 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.8.1-Alpha,</span>
-<span id="revdate">2018-11-16</span>
+<span id="revnumber">versione 0.8.2-Alpha,</span>
+<span id="revdate">2018-11-20</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_introduzione">Introduzione</a></li>
-<li><a href="#_messaggi_runtime_di_alan">Messaggi Runtime di Alan</a></li>
-<li><a href="#_messaggi_della_libreria_standard">Messaggi della Libreria Standard</a>
+<li><a href="#_messaggi_runtime_di_alan">Messaggi runtime di Alan</a></li>
+<li><a href="#_messaggi_della_libreria">Messaggi della Libreria</a>
+<ul class="sectlevel2">
+<li><a href="#_convenzioni_negli_identificativi_degli_attributi">Convenzioni negli identificativi degli attributi</a></li>
+<li><a href="#_messaggi_dei_verbi">Messaggi dei verbi</a>
 <ul class="sectlevel3">
-<li><a href="#_messaggi_dei_verbi">Messaggi dei Verbi</a></li>
+<li><a href="#_note_sulluso_di_v">Note sull&#8217;uso di <code>$v</code></a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#_todo">TODO</a>
 <ul class="sectlevel2">
-<li><a href="#_check_list_generale">Check List Generale</a></li>
-<li><a href="#_check_list_doxter">Check List Doxter</a></li>
+<li><a href="#_check_list_generale">Check-list generale</a></li>
+<li><a href="#_check_list_per_doxter">Check-list per Doxter</a></li>
 </ul>
 </li>
 </ul>
@@ -496,12 +501,12 @@ contengono le stringhe usate per la messaggistica della libreria.</p>
 <p>Questo modulo è il cuore della libreria per quanto concerne il testo
 prodotto da essa. Modificando le stringhe degli attributi nella seconda parte
 è possibile alterare la forma ed i contenuti della maggior parte delle
-risposte predefinite dei vari verbi della libreria.</p>
+risposte predefinite dei verbi della libreria.</p>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_messaggi_runtime_di_alan"><a class="anchor" href="#_messaggi_runtime_di_alan"></a>Messaggi Runtime di Alan</h2>
+<h2 id="_messaggi_runtime_di_alan"><a class="anchor" href="#_messaggi_runtime_di_alan"></a>Messaggi runtime di Alan</h2>
 <div class="sectionbody">
 <div class="admonitionblock warning">
 <table>
@@ -520,7 +525,7 @@ risposte predefinite dei vari verbi della libreria.</p>
 </div>
 </div>
 <div class="sect1">
-<h2 id="_messaggi_della_libreria_standard"><a class="anchor" href="#_messaggi_della_libreria_standard"></a>Messaggi della Libreria Standard</h2>
+<h2 id="_messaggi_della_libreria"><a class="anchor" href="#_messaggi_della_libreria"></a>Messaggi della Libreria</h2>
 <div class="sectionbody">
 <div class="admonitionblock warning">
 <table>
@@ -536,26 +541,305 @@ risposte predefinite dei vari verbi della libreria.</p>
 </tr>
 </table>
 </div>
+<div class="sect2">
+<h3 id="_convenzioni_negli_identificativi_degli_attributi"><a class="anchor" href="#_convenzioni_negli_identificativi_degli_attributi"></a>Convenzioni negli identificativi degli attributi</h3>
+<div class="paragraph">
+<p>Nella scelta degli identificativi degli attributi stringa per i messaggi
+della libreria sono state adottate le sequenti convenzioni.</p>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Nota"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>Sebbene irrilevante ai fini della compilazione del codice, l&#8217;uso di lettere
+maiuscole e minuscole negli identificativi degli attributi di messaggi è
+rilevante ai fini delle presenti convenzioni poiché il maiuscolo viene
+impiegato in contesti specifici.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>Si è cercato di creare identificativi in grado di veicolare il senso del
+messaggio che rappresentano in maniera succinta e intuitiva. Per ragioni di
+spazio, sono state adottate una serie di abbreviazioni di uso comune:</p>
+</div>
+<div class="hdlist">
+<table>
+<tr>
+<td class="hdlist1">
+<code>ogg</code>  
+</td>
+<td class="hdlist2">
+<p>&#8594; &#8216;oggetto&#8217; del verbo, inteso come <em>parametro</em>.</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+<code>prep</code> 
+</td>
+<td class="hdlist2">
+<p>&#8594; &#8216;preposizione,&#8217; in genere intesa come <em>preposizione articolata</em>.</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+<code>qlco</code> 
+</td>
+<td class="hdlist2">
+<p>&#8594; &#8216;qualcosa&#8217;.</p>
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>Alcune abbreviazioni sono indicatrici di alcune caratteristiche tecniche del
+messaggio che rappresentano:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><code>ogg1</code> e <code>ogg2</code> indicano che il messaggio fa riferimento ad uno specifico
+parametro del verbo utilizzando <code>$+1</code> o <code>$+2</code>, rispettivamente, nella
+stringa dell&#8217;attributo. Es. <code>ogg2_non_posseduto</code>.</p>
+</li>
+<li>
+<p><code>_sg</code> e <code>_pl</code> rappresentano varianti di un medesimo messaggio, il primo
+da utilizzarsi con un referente singolare, il secondo con uno plurale.
+Es. <code>ogg1_inadatto_sg</code> e <code>ogg1_inadatto_pl</code>.</p>
+</li>
+<li>
+<p><code>_USA</code> è impiegato nei messaggi volti a indirizzare il giocatore all&#8217;uso
+corretto di un verbo, solitamente associato a verbi creati appositamente
+per intercettare comandi incompleti. Es. <code>per_scrivere_USA</code>.</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_messaggi_dei_verbi"><a class="anchor" href="#_messaggi_dei_verbi"></a>Messaggi dei verbi</h3>
 <div class="sect3">
-<h4 id="_messaggi_dei_verbi"><a class="anchor" href="#_messaggi_dei_verbi"></a>Messaggi dei Verbi</h4>
+<h4 id="_note_sulluso_di_v"><a class="anchor" href="#_note_sulluso_di_v"></a>Note sull&#8217;uso di <code>$v</code></h4>
 <div class="paragraph">
-<p>Siccome i messaggi dei verbi italiani richiedono spesso l&#8217;uso della forma
-infinita del verbo cui fanno riferimento, molti di questi messaggi sono
-troncati e spetterà al codice che si occupa dei controlli sul verbo di far
-seguire al messaggio l&#8217;infinito del verbo in questione.</p>
+<p>Nelle stringhe di risposta dei verbi, la libreria originale inglese faceva
+abbondante uso del simbolo speciale <code>$v</code>, che Alan sostituisce con il verbo
+digitato dal giocatore. Per esempio, ipotizzando che il giocatore abbia
+digitato &#8220;talk to wall,&#8221; queste stringhe di codice produrrebero:</p>
+</div>
+<div class="hdlist">
+<table>
+<tr>
+<td class="hdlist1">
+<code>"You can&#8217;t $v to $+1."</code>     
+</td>
+<td class="hdlist2">
+<p>&#8594; You can&#8217;t talk to the wall.</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+<code>"$ving to $+1 is useless."</code> 
+</td>
+<td class="hdlist2">
+<p>&#8594; Talking to the wall is useless.</p>
+</td>
+</tr>
+</table>
 </div>
 <div class="paragraph">
-<p>Questo avviene poiché in italiano non è sempre possibile derivare la forma
-infinita aggiungendo &#8220;re&#8221; all&#8217;imperativo (es. "mangia" &#8594; "mangiare"),
-laddove in inglese l&#8217;imperativo è l&#8217;infinito si equivalgono in forma. Nella
-libreria inglese il compito era quindi semplificato dalla possibilità di
-utilizzare la sequenza speciale <code>$v</code> all&#8217;interno delle stringhe dei messaggi,
-che Alan poi sostituisce con il verbo digitato dal giocatore.</p>
+<p>Poiché in inglese il verbo imperativo digitato dal giocatore corrisponde
+alla forma base del verbo, il simbolo <code>$v</code> è utilizzabile in svariati tempi
+verbali, e per ottenere il participio presente basta aggiungervi &#8220;ing&#8221;
+(<code>$ving</code>).</p>
 </div>
 <div class="paragraph">
-<p>Questa complicazione ha portato a una rielaborazione dell&#8217;intero corpo degli
-attributi stringa dei messaggi, nonché della loro modalità d&#8217;uso all&#8217;interno
-dei verbi, disconstandosi parecchio dalla libreria originale.</p>
+<p>Nella libreria inglese, questo ha reso possibile la creazione di attributi
+stringa per risposte riutilizzabili con svariati verbi e in maniera
+flessibile. Inoltre, nel caso di verbi con sinonimi o sintassi alternative,
+ha consentito di poter includere nella risposta l&#8217;esatto verbo digitato dal
+giocatore, consentendo una maggior flessibilità nel riutilizzo dei verbi.</p>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Nota"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>Nell&#8217;output, <code>$v</code> viene sempre sostituito dal verbo digitato dal giocatore,
+a prescindere se esso corrisponda alla definizione del verbo di base, ad una
+sintassi alternativa o un sinonimo.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>In italiano, purtroppo, l&#8217;impiego di <code>$v</code> nelle risposte non è altrettanto
+flessibile. Nel caso di verbi il cui imperativo termina in &#8216;a&#8217;, è possibile
+utilizzare <code>$v</code> come nella libreria inglese. Per esempio, ipotizzando che il
+giocatore abbia digitato &#8220;mangia il maestro&#8221;:</p>
+</div>
+<div class="hdlist">
+<table>
+<tr>
+<td class="hdlist1">
+<code>"Non puoi $vre $+1."</code>        
+</td>
+<td class="hdlist2">
+<p>&#8594; Non puoi mangiare il maestro.</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+<code>"$+1 non vuol essere $vto."</code> 
+</td>
+<td class="hdlist2">
+<p>&#8594; Il maestro non vuol essere mangiato.</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+<code>"$+1 non è $vbile."</code>         
+</td>
+<td class="hdlist2">
+<p>&#8594; Il maestro non è mangiabile.</p>
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>Ma in italiano sono frequenti i verbi in cui questo non funzionerebbe.
+Per esempio, dai seguenti verbi non è possibile derivare l&#8217;infinito dalla
+forma imperativa del comando usando la formula <code>$+v</code>+<code>re</code> (<code>"$vre"</code>):</p>
+</div>
+<div class="hdlist">
+<table>
+<tr>
+<td class="hdlist1">
+bevi    
+</td>
+<td class="hdlist2">
+<p>&#8594; bevire.</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+siediti 
+</td>
+<td class="hdlist2">
+<p>&#8594; sieditire.</p>
+</td>
+</tr>
+<tr>
+<td class="hdlist1">
+dai     
+</td>
+<td class="hdlist2">
+<p>&#8594; daire.</p>
+</td>
+</tr>
+</table>
+</div>
+<div class="paragraph">
+<p>Questo problema ha determinato un uso limitato di <code>$v</code> nella della libreria
+italiana, e ad una rielaborazione dell&#8217;intero corpo degli attributi stringa
+dei messaggi, nonché della loro modalità d&#8217;uso all&#8217;interno dei verbi,
+disconstandosi parecchio dalla libreria originale.</p>
+</div>
+<div class="paragraph">
+<p>Laddove la libreria originale definiva attributi stringa con risposte
+complete, e condivise da più verbi, grazie all&#8217;uso di <code>$v</code>, nella libreria
+italiana si è dovuto creare messaggi parziali in cui è omesso il verbo,
+facendo ricadere sul corpo del verbo l&#8217;onore di completare la frase.</p>
+</div>
+<div class="paragraph">
+<p>Ad esempio, la libreria inglese definisce i seguenti attributi per le
+risposte in caso di parametri non idonei al verbo:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">  HAS illegal_parameter_sg "That's not something you can $v.".
+  HAS illegal_parameter_pl "Those are not something you can $v.".</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Ciascun attributo è una risposta completa e non richiede ulteriore testo.
+Nella libreria italiana questi attributi sono stati tradotti così:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">  HAS ogg1_inadatto_sg  "$+1 non è qualcosa che puoi".
+  HAS ogg1_inadatto_pl  "$+1 non sono qualcosa che puoi".</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>L&#8217;impedimento ad usare <code>$v</code> ha costretto a troncare le frasi negli attributi,
+e a doverle completare nel codice dei verbi stessi. Ad esempio:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">SYNTAX ispeziona = ispeziona (ogg)
+  WHERE ogg IsA THING
+    ELSE
+      IF ogg IS NOT plurale
+        THEN SAY mia_AT:ogg1_inadatto_sg.
+        ELSE SAY mia_AT:ogg1_inadatto_pl.
+      END IF. "ispezionare."
+
+SYNONYMS perquisisci = ispeziona.</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>Questo approccio consente di riutilizzare il messaggio con tutti i verbi,
+inclusi quelli che non terminano per &#8216;a&#8217;.</p>
+</div>
+<div class="paragraph">
+<p>Nel caso di messaggi più complessi, nei quali il verbo ricade
+necessariamente al centro della frase, è impossibile creare un messaggio
+completo tramite un solo attributo stringa. Per esempio, messaggi della
+libreria originale come questo:</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-alan hljs" data-lang="alan">  HAS check_obj_not_in_worn2 "It doesn't make sense to $v something you're wearing.".</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>non possono essere tradotti in italiano se non utilizzando due attributi
+distinti (scelta poco pratica). In simili casi la frase della risposta
+va rimpiazzata con una più adatta all&#8217;uso, oppure si rinuncia ad usare un
+attributo stringa e si implementa la risposta usando semplici stringhe nel
+ corpo verbo.</p>
+</div>
+<div class="paragraph">
+<p>Ritornando all&#8217;esempio precedente, si noterà che l&#8217;infinito del verbo è
+rappresentato da una stringa letterale, perciò il verbo mostrato nella
+risposta sarà sempre &#8220;ispezionare&#8221;, anche quando il giocatore userà il
+sinonimo &#8216;perquisisci&#8217;. Questo è per via del fatto che &#8216;perquisisci&#8217;
+sarebbe inadatto all&#8217;uso di <code>$vre</code> (= &#8216;perquisiscire&#8217;).</p>
+</div>
+<div class="paragraph">
+<p>Quando tutte le sintassi ed i sinonimi di un verbo terminano in &#8216;a&#8217; si può
+anche ricorrere al&#8217;uso <code>$v</code> nel codice del verbo. Questo rende le risposte più
+fluide, specie nel caso di verbi che coprono sintassi simili ma con
+significati diversi (e.s. &#8216;graffia&#8217; e &#8216;gratta&#8217; come traduzione del verbo
+inglese &#8216;scratch&#8217;). Il rischio però è che un autore possa aggiungere
+ulteriori sinonimi o sintassi per il verbo, e che alcuni di essi possano
+condurre a risposte sgrammaticate.</p>
+</div>
+<div class="paragraph">
+<p>In alcuni casi l&#8217;implementazione di sinonimi è finalizzata a catturare
+potenziali comandi del giocatore mal formulati; in questi casi l&#8217;utilizzo di
+un verbo diverso da quello digitato serve anche a sottolineare al giocatore
+quale sia il corretto verbo di base associato all&#8217;azione.</p>
+</div>
 </div>
 </div>
 </div>
@@ -568,13 +852,13 @@ dei verbi, disconstandosi parecchio dalla libreria originale.</p>
 italiano del modulo delle classi.</p>
 </div>
 <div class="sect2">
-<h3 id="_check_list_generale"><a class="anchor" href="#_check_list_generale"></a>Check List Generale</h3>
+<h3 id="_check_list_generale"><a class="anchor" href="#_check_list_generale"></a>Check-list generale</h3>
 <div class="paragraph">
 <p>Lista della spesa per le varie cosucce da fare:</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_check_list_doxter"><a class="anchor" href="#_check_list_doxter"></a>Check List Doxter</h3>
+<h3 id="_check_list_per_doxter"><a class="anchor" href="#_check_list_per_doxter"></a>Check-list per Doxter</h3>
 <div class="paragraph">
 <p>Finisci di trasformare commenti in documentazione Doxter:</p>
 </div>
@@ -584,7 +868,7 @@ italiano del modulo delle classi.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.8.1-Alpha<br>
+Versione 0.8.2-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
