--- a/alanlib_ita/lib_supplemento.html
+++ b/alanlib_ita/lib_supplemento.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.8.0-Alpha,</span>
-<span id="revdate">2018-11-13</span>
+<span id="revnumber">versione 0.8.1-Alpha,</span>
+<span id="revdate">2018-11-20</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -449,8 +449,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_predefined_player_words">Predefined Player Words</a></li>
 <li><a href="#_todo">TODO</a>
 <ul class="sectlevel2">
-<li><a href="#_check_list">Check List</a></li>
-<li><a href="#_check_list_doxter">Check List Doxter</a></li>
+<li><a href="#_check_list_generale">Check-list generale</a></li>
+<li><a href="#_check_list_per_doxter">Check-list per Doxter</a></li>
 </ul>
 </li>
 </ul>
@@ -530,13 +530,13 @@ NOISE: go the</pre>
 italiano del modulo supplementare.</p>
 </div>
 <div class="sect2">
-<h3 id="_check_list"><a class="anchor" href="#_check_list"></a>Check List</h3>
+<h3 id="_check_list_generale"><a class="anchor" href="#_check_list_generale"></a>Check-list generale</h3>
 <div class="paragraph">
 <p>Lista della spesa per le varie cosucce da fare:</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_check_list_doxter"><a class="anchor" href="#_check_list_doxter"></a>Check List Doxter</h3>
+<h3 id="_check_list_per_doxter"><a class="anchor" href="#_check_list_per_doxter"></a>Check-list per Doxter</h3>
 <div class="paragraph">
 <p>Finisci di trasformare commenti in documentazione Doxter:</p>
 </div>
@@ -568,7 +568,7 @@ italiano del modulo supplementare.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.8.0-Alpha<br>
+Versione 0.8.1-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
