Lib v0.9.0: Suddividi Modulo Messaggi
Il modulo `lib_messaggi.i` è ora diviso in due moduli distinti:

- `lib_messaggi_runtime.i`
- `lib_messaggi_libreria.i`

Tutti i moduli della libreria passano alla versione 0.9.0.

--- a/alanlib_ita/lib_verbi.html
+++ b/alanlib_ita/lib_verbi.html
@@ -438,8 +438,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="details">
 <span id="author" class="author">Tristano Ajmone</span><br>
 <span id="email" class="email"><a href="mailto:tajmone@gmail.com">tajmone@gmail.com</a></span><br>
-<span id="revnumber">versione 0.8.4-Alpha,</span>
-<span id="revdate">2018-11-20</span>
+<span id="revnumber">versione 0.9.0-Alpha,</span>
+<span id="revdate">2018-11-22</span>
 <br><span id="revremark">Alan 3.0beta6</span>
 </div>
 <div id="toc" class="toc2">
@@ -470,6 +470,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_punteggio_e_notifiche">Punteggio e notifiche</a>
 <ul class="sectlevel3">
 <li><a href="#_vedi_punteggio">vedi_punteggio</a></li>
+<li><a href="#_vedi_punteggio_2">vedi_punteggio</a></li>
 <li><a href="#_notifica">notifica</a></li>
 <li><a href="#_notifica_on">notifica_on</a></li>
 <li><a href="#_notifica_off">notifica_off</a></li>
@@ -2658,6 +2659,10 @@ della partita:</p>
 </div>
 <div class="sect3">
 <h4 id="_vedi_punteggio"><a class="anchor" href="#_vedi_punteggio"></a>vedi_punteggio</h4>
+
+</div>
+<div class="sect3">
+<h4 id="_vedi_punteggio_2"><a class="anchor" href="#_vedi_punteggio_2"></a>vedi_punteggio</h4>
 
 </div>
 <div class="sect3">
@@ -4857,7 +4862,7 @@ vicini tra loro verbi correlati, simmetrici e/o complementari.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Versione 0.8.4-Alpha<br>
+Versione 0.9.0-Alpha<br>
 </div>
 </div>
 <link rel="stylesheet" href="hjs/styles/github.min.css">
