--- a/alanlib_ita/ANNOTAZIONI_DOXTER.html
+++ b/alanlib_ita/ANNOTAZIONI_DOXTER.html
@@ -522,7 +522,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <thead>
 <tr>
 <th class="tableblock halign-right valign-top">weight</th>
-<th class="tableblock halign-right valign-top">subweight</th>
+<th class="tableblock halign-right valign-top">subw</th>
 <th class="tableblock halign-left valign-top"></th>
 <th class="tableblock halign-left valign-top">descrizione</th>
 </tr>
@@ -676,7 +676,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <thead>
 <tr>
 <th class="tableblock halign-right valign-top">weight</th>
-<th class="tableblock halign-right valign-top">subweight</th>
+<th class="tableblock halign-right valign-top">subw</th>
 <th class="tableblock halign-left valign-top"></th>
 <th class="tableblock halign-left valign-top">descrizione</th>
 </tr>
@@ -740,7 +740,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <thead>
 <tr>
 <th class="tableblock halign-right valign-top">weight</th>
-<th class="tableblock halign-right valign-top">subweight</th>
+<th class="tableblock halign-right valign-top">subw</th>
 <th class="tableblock halign-left valign-top"></th>
 <th class="tableblock halign-left valign-top">descrizione</th>
 </tr>
@@ -792,7 +792,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <thead>
 <tr>
 <th class="tableblock halign-right valign-top">weight</th>
-<th class="tableblock halign-right valign-top">subweight</th>
+<th class="tableblock halign-right valign-top">subw</th>
 <th class="tableblock halign-left valign-top"></th>
 <th class="tableblock halign-left valign-top">descrizione</th>
 </tr>
@@ -800,12 +800,6 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <tbody>
 <tr>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>100</code></p></td>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock"><code>intro</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">= Introduzione</p></td>
-</tr>
-<tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>10000</code></p></td>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>messaggi_runtime</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==  Messaggi Runtime di Alan</p></td>
@@ -850,26 +844,32 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <thead>
 <tr>
 <th class="tableblock halign-right valign-top">weight</th>
-<th class="tableblock halign-right valign-top">subweight</th>
+<th class="tableblock halign-right valign-top">subw</th>
 <th class="tableblock halign-left valign-top"></th>
 <th class="tableblock halign-left valign-top">descrizione</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>100</code></p></td>
 <td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>messaggi_libreria</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==  Messaggi della Libreria</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>23000</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>500</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>1</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>libmsg_convenzioni</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">=== Convenzioni negli identificativi degli attributi</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20000</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>libmsg_verbi</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">=== Messaggi dei Verbi</p></td>
 </tr>
 <tr>
-<td class="tableblock halign-right valign-top"><p class="tableblock"><code>23100</code></p></td>
+<td class="tableblock halign-right valign-top"><p class="tableblock"><code>20100</code></p></td>
 <td class="tableblock halign-right valign-top"></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>libmsg_verbi_vsym</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">==== Note Riguardo l&#8217;Uso di <code>$v</code></p></td>
@@ -914,7 +914,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <thead>
 <tr>
 <th class="tableblock halign-right valign-top">weight</th>
-<th class="tableblock halign-right valign-top">subweight</th>
+<th class="tableblock halign-right valign-top">subw</th>
 <th class="tableblock halign-left valign-top"></th>
 <th class="tableblock halign-left valign-top">descrizione</th>
 </tr>
@@ -1212,7 +1212,7 @@ I frammenti delle regioni hanno un sottopeso; durante la fase di collatura del d
 <thead>
 <tr>
 <th class="tableblock halign-right valign-top">weight</th>
-<th class="tableblock halign-right valign-top">subweight</th>
+<th class="tableblock halign-right valign-top">subw</th>
 <th class="tableblock halign-left valign-top"></th>
 <th class="tableblock halign-left valign-top">descrizione</th>
 </tr>
